fix(outlets): add margin-bottom to outlets section to improve spacing before footer

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -151,7 +151,6 @@
       padding: 0.5rem;                
     }
 
-    
     > div:last-child {
       flex-basis: 100%;               
       max-width: 320px;               
@@ -200,6 +199,7 @@
   }
   .padding-top-xl { padding-top: 2rem; }
   .margin-top { margin-top: 3rem; }
+  .margin-bottom { margin-bottom: 3rem; }
 }
 
 @include bp-md-down {
@@ -210,6 +210,7 @@
   }
   .padding-top-xl { padding-top: 1.5rem; }
   .margin-top { margin-top: 2rem; }
+  .margin-bottom { margin-bottom: 2rem; }
 }
 
 @include bp-sm-down {
@@ -235,6 +236,8 @@
     padding-bottom: 1rem;
   }
   .padding-top-xl { padding-top: 1rem; }
+
+  .margin-bottom { margin-bottom: 1 rem; }
 }
 
 // Typography adaptations
