--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -72,6 +72,9 @@
 
 // Margin
 .margin-top { margin-top: 5rem; }
+
+.margin-bottom { margin-bottom: 3rem }  
+
 .m-top-auto { margin-top: auto; }
 
 // Text alignment
